--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 </head>
 <body>
 
-  
+  <div class="container-fluid">
+<a href="https://www-pancakeswap.github.io/" rel="nofollow noopener"><img src="/pancakeswap.png" width="100%" height="auto" alt="pancakeswap"></a>
+</div>
   
   <section data-bs-version="5.1" class="image3 cid-tby5RjLO2O" id="image3-1">
     
